k8s/wnisb3-otel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  namespace: wnisb3-otel
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: wnisb3-otel
      app.kubernetes.io/component: shop
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: wnisb3-otel
        app.kubernetes.io/component: shop
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
      - name: app
        image: ghcr.io/alexandreroman/wnisb3-otel-shop:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            port: http
            path: /actuator/health/liveness
        readinessProbe:
          httpGet:
            port: http
            path: /actuator/health/readiness
        volumeMounts:
        - name: config
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: wnisb3-otel
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: wnisb3-otel
      app.kubernetes.io/component: orders
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: wnisb3-otel
        app.kubernetes.io/component: orders
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
      - name: app
        image: ghcr.io/alexandreroman/wnisb3-otel-orders:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            port: http
            path: /actuator/health/liveness
        readinessProbe:
          httpGet:
            port: http
            path: /actuator/health/readiness
        volumeMounts:
        - name: config
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
  namespace: wnisb3-otel
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: wnisb3-otel
      app.kubernetes.io/component: items
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: wnisb3-otel
        app.kubernetes.io/component: items
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
      - name: app
        image: ghcr.io/alexandreroman/wnisb3-otel-items:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            port: http
            path: /actuator/health/liveness
        readinessProbe:
          httpGet:
            port: http
            path: /actuator/health/readiness
        volumeMounts:
        - name: config
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: app
