k8s/wnisb3-otel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop
  namespace: wnisb3-otel
spec:
  rules:
  - host: otel.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shop
            port:
              number: 8080
